登陆界面 搭建

--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -1,9 +1,34 @@
-.login-row {
+
+#login{
   height: 100%;
-  .login-form {
-    padding: 16px 8px;
-    background: #f8f8f8;
+  background: #fafafa;
+
+  .ant-layout-header{
+    height: 15%;
+    background: #fafafa;
+  }
+
+  .ant-layout-content{
+    margin-top: 8%;
+    padding: 30px;
+    background: url("../../img/login-bg.jpg");
+    background-size: 100%;
+    border-top: 1px rgb(224, 223, 223) solid;
+    border-bottom: 1px rgb(224, 223, 223) solid;
+  }
+
+  .ant-layout-footer{
+    background: #fafafa;
+    height: 150px;
+    line-height: 75px;
+    text-align: center;
+  }
+
+  .ant-row>.loginBox{
+    padding: 30px 1.5%;
     border: 1px solid #d9d9d9;
-    border-radius: 6px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.22) 4px 5px 10px;
+/*    background: #f7eee9;*/
   }
 }
