admin  后台  界面搭建

--- a/src/views/Home/index.less
+++ b/src/views/Home/index.less
@@ -5,3 +5,31 @@
   text-align: center;
   line-height: 30px;
 }
+
+
+#home{
+  .ant-btn-primary{
+    margin-bottom: 20px;
+  }
+
+  .ant-tag{
+    line-height: 26px;
+    height: 26px;
+  }
+
+  .anticon{
+    padding: 3px;
+  }
+
+  .ant-tabs-nav .ant-tabs-tab{
+    height: auto;
+  }
+
+  .ant-form{
+    margin-top: 20px;
+  }
+
+  .ant-form-item-with-help{
+    margin-bottom: 30px;
+  }
+}
