admin'端 除了编辑 和 用户信息 其他接口都已经完成

--- a/src/views/Home/index.less
+++ b/src/views/Home/index.less
@@ -1,3 +1,21 @@
+.ant-layout-header{
+  height: 42px !important;
+  line-height: 42px !important;
+}
+
+.ant-layout-aside .ant-layout-container{
+  margin: 0 16px 0 16px;
+}
+
+.ant-pagination{
+  margin-top: 15px;
+}
+
+.ant-layout-aside .ant-layout-footer{
+  padding: 0;
+}
+
+
 .home-row {
   margin-bottom: 20px;
 }
