--- a/src/components/Sidebar/index.less
+++ b/src/components/Sidebar/index.less
@@ -1,9 +1,11 @@
 .ant-layout-aside .ant-layout-logo {
   width: 150px;
-  height: 32px;
+  height: 100px;
   background: #333;
   border-radius: 6px;
   margin: 16px 24px 16px 28px;
+  background: url("../../img/logo.png") no-repeat 25px 0;
+  background-size: 74%;
 }
 
 .ant-layout-aside .ant-layout-sider {
