BUG  FIX   基本完成 收工

--- a/src/views/Home/index.less
+++ b/src/views/Home/index.less
@@ -51,3 +51,58 @@
     margin-bottom: 30px;
   }
 }
+
+.headPic{
+    width: 40px;
+    height: 40px;
+  margin: 0 5px 0 0;
+}
+
+.ant-modal-body{
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.goodFunderList{
+  margin: 0px 0 20px 0;
+  display: flex;
+  line-height: 40px;
+}
+
+.funder{
+  width: 50%;
+  margin: 5px 0 20px 0;
+  float: left;
+  position: relative;
+}
+
+.funder>.ant-tag{
+  position: absolute;
+  top: 2px;
+  left: 45px;
+}
+.funder>.ant-tag-green-inverse{
+  position: absolute;
+  top: -19px;
+  left: 0;
+}
+
+
+
+
+.ant-tag{
+  margin-right: 0;
+}
+
+.ant-dropdown-menu{
+  width: 300px;
+}
+
+.ant-col-8.gutter-row, .ant-col-10.gutter-row{
+  margin-top: 8px;
+}
+
+.ant-dropdown-menu{
+  height: 300px;
+  overflow-y: scroll;
+}
